--- a/singolo1.html
+++ b/singolo1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>SINGOLO</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i&display=swap" rel="stylesheet">    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" />
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="singolo1.css">
 </head>
 <body>
