--- a/singolo1.html
+++ b/singolo1.html
@@ -21,10 +21,10 @@
 </header>
 
 <section class="slider">
-    <img src='assets/img/iPhone_Vertical.png' alt="">
-    <img src="assets/img/iPhone_Horizontal.png" alt="">
-    <img class="prev" src="assets/img/chev.png" alt="">
-    <img class="next" src="assets/img/chev.png" alt="">
+    <img src='assets/img/singolo1/iPhone_Vertical.png' alt="">
+    <img src="assets/img/singolo1/iPhone_Horizontal.png" alt="">
+    <img class="prev" src="assets/img/singolo1/chev.png" alt="">
+    <img class="next" src="assets/img/singolo1/chev.png" alt="">
 </section>
 
 <section class="services">
