--- a/singolo3.html
+++ b/singolo3.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<div class="quote">
+<section class="quote">
     <div class="quote-wrapper">
         <h2>Get a Quote</h2>
 
@@ -40,7 +40,7 @@
             </div>
         </div>
     </div>
-</div>
+</section>
 
 <footer>
     <span>&copy; Copyright 2013</span>
