--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>SINGOLO</title>
     <link rel="stylesheet" href="normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i&display=swap" rel="stylesheet">
@@ -22,17 +23,6 @@
 </header>
 
 <section class="slider" id="slider">
-    <div class='slide-single'>
-        <div class="screen-1" id="screen-1"></div>
-        <div class="screen-2" id="screen-2"></div>
-        <img src="assets/img/1.png" alt="">
-    </div>
-    <div class="slide-single">
-        <img src="assets/img/2.png" alt="">
-    </div>
-
-
-
     <img class="prev" src="assets/img/singolo1/chev.png" alt="">
     <img class="next" src="assets/img/singolo1/chev.png" alt="">
 </section>
@@ -137,7 +127,7 @@
         tortor mauris condimentum nibh.</p>
     <div class="about-items">
         <div class="about-item">
-            <img src="assets/img/singolo2/photo.png" alt="" data-img="portfolio-img" class="portfolio-img">
+            <img src="assets/img/singolo2/photo.png" alt="lol" class="portfolio-img">
             <h3>Adam Jensen</h3>
             <p>Quisque luctus quam eget molestie comodo lacus purus cursus purus, nec  rutrum tellus
                 dolor id lorem.</p>
@@ -149,7 +139,7 @@
             </div>
         </div>
         <div class="about-item">
-            <img src="assets/img/singolo2/photo%20(1).png" alt="" data-img="portfolio-img" class="portfolio-img">
+            <img src="assets/img/singolo2/photo%20(1).png" alt="kek" class="portfolio-img">
             <h3>Desmond Miles</h3>
             <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut,
                 ultrices velit.</p>
@@ -161,7 +151,7 @@
             </div>
         </div>
         <div class="about-item">
-            <img src="assets/img/singolo2/photo%20(2).png" alt="" data-img="portfolio-img" class="portfolio-img">
+            <img src="assets/img/singolo2/photo%20(2).png" alt="cheburek" class="portfolio-img">
             <h3>Scolara Visari</h3>
             <p>Nulla sed nunc et totor luctus faucibus. Morbi at aliquet turpis, et consequat felis.
                 Quisque condimentum.</p>
@@ -183,7 +173,7 @@
             luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus
             commodo, tortor mauris condimentum nibh.</p>
         <div class="flex-wrapper">
-            <form action="#" method="POST" id="form">
+            <form action="#" method="POST" id="form" name="form">
                 <input type="text" id="name" name="name"
                        placeholder="Name (Required)" required>
                 <input type="email" id="email"  name="email"
