--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 </head>
 <body id="home">
 <header>
+    <span class="burger-menu"><span class="burger"></span></span>
     <h1 class="logo">SINGOLO<span>*</span></h1>
     <nav class="menu" id="header_menu">
         <ul>
-            <li>HOME</li>
+            <li class="menu_active">HOME</li>
             <li>SERVICES</li>
             <li>PORTFOLIO</li>
             <li>ABOUT</li>
@@ -81,42 +82,18 @@
         <li>Artwork</li>
     </ul>
     <div class="images">
-        <div>
-            <img class="img-1" src="assets/img/singolo2/Project%20(6).png" alt="">
-        </div>
-        <div>
-            <img class="img-2" src="assets/img/singolo2/Project%20(3).png" alt="">
-        </div>
-        <div>
-            <img class="img-3" src="assets/img/singolo2/Layer%209.png" alt="">
-        </div>
-        <div>
-            <img class="img-4" src="assets/img/singolo2/Project%20(8).png" alt="">
-        </div>
-        <div>
-            <img class="img-5" src="assets/img/singolo2/Project%20(5).png" alt="">
-        </div>
-        <div>
-            <img class="img-6" src="assets/img/singolo2/Project%20(2).png" alt="">
-        </div>
-        <div>
-            <img class="img-7" src="assets/img/singolo2/Layer%2011.png" alt="">
-        </div>
-        <div>
-            <img class="img-8" src="assets/img/singolo2/Layer%208.png" alt="">
-        </div>
-        <div>
-            <img class="img-9" src="assets/img/singolo2/Project%20(4).png" alt="">
-        </div>
-        <div>
-            <img class="img-10" src="assets/img/singolo2/Project%20(1).png" alt="">
-        </div>
-        <div>
-            <img class="img-11" src="assets/img/singolo2/Project.png" alt="">
-        </div>
-        <div>
-            <img class="img-12" src="assets/img/singolo2/Project%20(7).png" alt="">
-        </div>
+            <img class="img-1" src="assets/img/singolo2/portfolio-1.png" alt="">
+            <img class="img-2" src="assets/img/singolo2/portfolio-2.png" alt="">
+            <img class="img-3" src="assets/img/singolo2/portfolio-3.png" alt="">
+            <img class="img-4" src="assets/img/singolo2/portfolio-4.png" alt="">
+            <img class="img-5" src="assets/img/singolo2/portfolio-5.png" alt="">
+            <img class="img-6" src="assets/img/singolo2/portfolio-6.png" alt="">
+            <img class="img-7" src="assets/img/singolo2/portfolio-7.png" alt="">
+            <img class="img-8" src="assets/img/singolo2/portfolio-8.png" alt="">
+            <img class="img-9" src="assets/img/singolo2/portfolio-9.png" alt="">
+            <img class="img-10" src="assets/img/singolo2/portfolio-10.png" alt="">
+            <img class="img-11" src="assets/img/singolo2/portfolio-11.png" alt="">
+            <img class="img-12" src="assets/img/singolo2/portfolio-12.png" alt="">
     </div>
 </section>
 <section class="aboutUs" id="about">
